--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ nav {
     color: #fff;
     font-size: x-large;
     position: relative;
-    top: -10px
+    top: -10px;
 }
 #headertext { 
     text-align: center;
