--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav {
     padding-right: 2em;
     text-decoration: none;
 }
-#headernav ul button {
+#headernav ul li button {
     background-color: transparent;
     border: #fff Solid 2px;
     border-radius: 30px;
@@ -64,6 +64,7 @@ nav {
     font-size: x-large;
     position: relative;
     top: -10px;
+    cursor: pointer;
 }
 #headertext { 
     text-align: center;
@@ -82,7 +83,8 @@ nav {
     color: #fff;
     margin-bottom: 2em;
 }
-#headertext button {
+#holiday-partners {
+    text-decoration: none;
     font-family: Roboto, Montserrat;
     border: 0px;
     border-radius: 30px;
@@ -183,6 +185,7 @@ nav {
     color: #FF4E50;
     position: relative;
     left: 42%;
+    cursor: pointer;
 }
 #holiday {
     margin: 1.5em;
@@ -217,7 +220,7 @@ nav {
 
 /*********Footer*********/
 footer {
-    border-top: #FF4E50 solid 2px;;
+    border-top: #FF4E50 solid 2px;
     width: 100%;
     height: 210px;
     background-color: #FFFFFF;
@@ -232,12 +235,13 @@ th {
     color: #444444;
     text-align: left;
 }
-td {
-    color: #666666;
-}
 td, th {
     padding-right: 4.8em; 
     margin-left: 1em;
+}
+td, td a {
+    text-decoration: none;
+    color: #666666;
 }
 .pink {
     color: #FF4E50;
