--- a/styles.css
+++ b/styles.css
@@ -1,150 +1,176 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+html,body {
+    width: 100%;
+    margin: 0;
+    padding: 0; 
+}
 body {
-    font-family: 'Roboto', 'Montserrat', sans-serif;
-    background-image: url(dreamshare_assets/assets/headerBackground.jpg);
+    font-family: Montserrat, Roboto, sans-serif;
+    background-image: url(../dreamshare_assets/assets/headerBackground.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 100%;
-    width: 80%;
+    background-color: #ffffff;
     margin: 0 auto;
     padding: 0;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    /* overflow: hidden; */
 }
-/*****HEADER*****/
+/* ----- header ----- */
 header {
-    margin: 0 auto;
-    padding: 5em ;
-    padding-top: 1.5em;
-    width: 80%;
-    height: 575px;
-    position: absolute;
-    left: 5.5%;
+    width: 100%;
+    height: 650px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 nav {
-    display: block;
-    margin: auto;
-    width: 80%;
+    display: inline-flex;
+    width: 100%;
     padding: .8em;
     position: relative;
     top: 0;
-    overflow: hidden;
 }
 .logo {
     fill: #ffffff;
+    margin: 1.5em;
     position: relative;
-    top: 15px;
+    left: 15%;
 }
-#headernav h2 a {
-    color: #fff;
-    text-decoration: none;
-}
-#headernav ul {
+ul#headernav {
     font-family: Montserrat, Roboto;
-    width: 65%;
     margin: 1em;
-    margin-left: 5em;
-    list-style-type: none;
+    margin-right: 3em;
+    padding-top: .3em;
+    list-style: none;
     float: right;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    right: -38%;
 }
-#headernav ul li  {
-    float: left;    
-}
-#headernav ul li a {
+ul#headernav li a {
     color: #fff;
     text-align: center;
     padding-right: 2em;
     text-decoration: none;
 }
-#headernav ul li button {
+#btn-signup {
     background-color: transparent;
-    border: #fff Solid 2px;
+    border: #fff solid 2px;
     border-radius: 30px;
     color: #fff;
-    font-size: x-large;
-    position: relative;
-    top: -10px;
-    cursor: pointer;
+    font-size: large;
+    position: relative;         
 }
-#headertext { 
-    text-align: center;
+#headertext {
     position: relative;
-    top: 20%;
-    left: 0;
-    height: 50%;
+    top: 30%;
 }
 #headertext h2 {
-    font-size: 3em;
+    font-size: 1.3em;
     font-weight: bolder;
     color: #fff;
+    margin-top: 1em;
 }
 #headertext p {
-    font-size: 1.3m;
+    font-size: 1.5em;
     color: #fff;
-    margin-bottom: 2em;
+    margin-top: .5em;
 }
-#holiday-partners {
-    text-decoration: none;
-    font-family: Roboto, Montserrat;
+#btn-holiday-partner {
     border: 0px;
     border-radius: 30px;
     background-color: #FF4E50;
+    margin: 2em;
     padding: 1em;
     font-size: .9em;
     color: #fff;
     overflow: hidden;
 }
-/*****HEADER - END*****/
-
-/*******Content********/
+/* ----- Content ----- */
 .content {
-    background-color: #fff;
-    position: absolute;
-    top: 675px;
-    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
     width: 100%;
-    height: 1600px;
+    height: 100%;
+    background-color: #ffffff;
+    padding-bottom: 3em;
 }
-.wrapper {
-    width: 70%;
-    margin: auto;
-}
-#partner{
-    margin: 1.5em; 
+#partner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .headings {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin: 1.5em 0;
     text-align: center;
     color: #444444;
-    margin-top: 3.5em;
 }
 #partner ul {
-    margin: auto;
-    height: 270px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: center;
+    margin: 2em auto;
 }
 #partner ul li {
-    display: block;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 200px;
     margin: .8em;
     margin-left: .5em;
-    float: left;
-    width: 22%;
+    width: 200px;
     max-height: 90%;
     text-align: center;
+    list-style: none;
 }
 .photo {
     border-radius: 50%;
 }
-.svg-contatainer {
+.partner-avatar {
+    margin: auto;
+    width: 200px;
+}
+.svg-container {
     width: 35px;
     height: 35px;
-    border: #fff solid 4px;
+    border: 4px #fff solid;
     border-radius: 50%;
     position: relative;
-    top: -65px;
-    left: 100px;
+    top: -45px;
+    left: 130px; 
 }
 .svg-icon {
-    position: absolute;
+    position: absolute; 
     top: 25%;
     left: 25%;
     width: 16px;
@@ -161,18 +187,20 @@ nav {
 }
 #airplane {
     background-color: #667DF3;
-    transform: rotate(-25deg);
+    transform: rotate(-42deg);
 }
 #partner ul li h4 {
     position: relative;
-    top: -65px;
+    top: -35px;
+    font-size: 1.1em;
     color: #444444;
 }
 #partner ul li p {
-    font-size: .9em;
-    color: #666666;
+    font-size: .86em;
+    margin: 1em;
+    color: #444444;
     position: relative;
-    top: -75px;
+    top: -25px;
 }
 #btn-partner {
     font-family: Roboto, Montserrat;
@@ -183,21 +211,17 @@ nav {
     font-size: 1em;
     font-weight: 900;
     color: #FF4E50;
-    position: relative;
-    left: 42%;
-    cursor: pointer;
 }
-#holiday {
-    margin: 1.5em;
+.holiday-activity {
+    margin: 0 auto;
+    width: 65%;
     max-height: 100%;
-    display: block;
-}
-#holiday figure {
-    padding: 10px;
-    margin: 0;
-}
-#holiday figure img {
-    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: stretch;
+    align-items: stretch;
 }
 .img-container {
     display: flex;
@@ -206,44 +230,167 @@ nav {
     margin-bottom: -75px;
     padding-bottom: 5px;
 }
+.holiday-activity figure {
+     padding: 10px;
+     margin: 0;
+     margin-bottom: 2.5em;
+}
+#holiday figure img {
+    border-radius: 5px;
+    width: 100%;
+    height: 92%;
+}
 .text-over-img {
-    font-size: 1em;
+    font-size: 1.2em;
+    font-weight: bolder;
     text-align: center;
     position: relative;
-    top: -160px;
+    top: -50%; 
     color: #ffffff;
 }
 #dark-grey {
     color: #444444;
 }
-/*****Content - End *****/
-
-/*********Footer*********/
+/* ----- Footer ----- */
 footer {
-    border-top: #FF4E50 solid 2px;
-    width: 100%;
-    height: 210px;
-    background-color: #FFFFFF;
-    position: absolute;
-    bottom: -228%;
-    left: 0;
+    border-top: 2px #FF4E50 solid;
+    background-color: #ffffff;
 }
-table {
-    margin: 1em auto;
+.footer-nav {
+    width: 60%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    margin-bottom: 2em;
+    padding-left: 10px;
 }
-th {
-    color: #444444;
-    text-align: left;
-}
-td, th {
-    padding-right: 4.8em; 
-    margin-left: 1em;
-}
-td, td a {
-    text-decoration: none;
+.footer-column {
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-right: 3em;
+    margin-top: 2em;
     color: #666666;
+}
+.footer-column-title {
+    font-weight: bold;
+    color: #444444;
 }
 .pink {
     color: #FF4E50;
+} 
+/* ----- Media Queries ----- */
+
+@media screen and (max-width: 768px) {
+    body {
+        background: none;
+    }
+    header {
+        max-width: fit-content;
+    }
+    nav {
+        background: rgba(61, 56, 56, .55);  
+        padding: 0;
+        position: relative;
+    }
+    .logo {
+        float: left;
+    }
+    ul#headernav {
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        display: none;
+        overflow: visible;
+        z-index: 1;
+    }
+    ul#headernav.open {
+        display: inline;
+        transition: all ease-in-out 4s;
+    }
+    ul#headernav li {  
+        height: 100%;        
+        /* border-bottom: rgba(168, 161, 161, 0.25) 2px solid; */
+        padding: .8em 0 .8em 0;
+        /* margin: 0 auto; */        
+    }
+    ul#headernav li:last-child {
+        border: none;
+    }
+    ul#headernav li a {
+        width: 100%;
+    }
+    .nav-hamburger {
+        padding: .5em;
+        position: absolute;
+        top: 1.5em;
+        right: 1.5em;
+        cursor: pointer;
+    }
+    .hamburger-line,
+    .hamburger-line::before,
+    .hamburger-line::after {  
+        content: '';
+        background: #ffffff;
+        display: block;
+        height: 3px;
+        width: 1.75em;
+    }
+    .hamburger-line::before {
+        transform: translateY(-7px);
+    }
+    .hamburger-line::after {
+        transform: translateY(3.5px)
+    } 
+    #headertext {
+        z-index: -1;
+    }
+    #btn-holiday-partner {
+        margin-top: 1em;
+    }
+    .holiday {
+        margin: 0 auto;
+        width: 65%;
+        max-height: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: stretch;
+        align-items: stretch;
+    }
+    .holiday figure {
+        flex-grow: 1;
+        flex-shrink: 0;
+        margin: 0 1em;
+        width: 100%;
+    }
+    #holiday figure img {
+        border-radius: 5px;
+        height: 92%;
+    }
+    .footer-nav {
+        width: 90%;
+        padding: 1em;
+    }
+    .footer-column {
+        margin-right: 1.5em;
+    }
 }
-/*****Footer - End*****/
+
+@media screen and (max-width: 320px) {
+   
+}
+
+@media screen and (max-width: 480px) {
+    
+}
+
+@media screen and (max-width: 1024px) {
+    
+}
+
+@media screen and (max-width: 1366px) {
+    
+}
